--- a/css/index.css
+++ b/css/index.css
@@ -270,7 +270,7 @@ nav a:hover::after {
 .bar.sql span { width: 60%; }
 .bar.ps span { width: 75%; }
 .bar.team span { width: 80%; }
-.bar.comm span{width: 90%;}
+.bar.com span{width: 90%;}
 
 
 /*SKILL BOXES  */
